# TokenomicsPro-2

./: .replit  theme.json  tsconfig.json
extracted_assets/TokenomicsPro/: .replit  app.py  database.py  pyproject.toml  replit.nix  utils.py
extracted_assets/TokenomicsPro/.streamlit/: config.toml
extracted_assets/TokenomicsPro/attached_assets/: Pasted-ValueError-Invalid-property-specified-for-object-of-type-plotly-graph-objs-layout-YAxis-titlefont-1742124499514.txt  Pasted-ValueError-Invalid-property-specified-for-object-of-type-plotly-graph-objs-layout-YAxis-titlefont-1742124856910.txt
extracted_assets/TokenomicsPro/pages/: 10_Market_Analysis.py  11_Marketing_Growth.py  12_Crypto_Trading.py  13_Market_Simulation.py  14_Cryptoeconomic_Systems_Designer.py  15_Tokenomics_Engine.py  1_Token_Supply_Distribution.py  2_Token_Allocation_Tracking.py  3_Economic_Simulation.py  4_Vesting_Schedule.py  5_Price_Market_Cap.py  6_Token_Design.py  7_Econometrics.py  8_Tokenization_Models.py  9_Business_Model.py
extracted_assets/TokenomicsPro/tmp_extract/TokenomicsLab/: .replit  App.css  App.jsx  app.py  index.html  pyproject.toml  vite.config.js
extracted_assets/TokenomicsPro/tmp_extract/TokenomicsLab/models/: tokenomics.py
extracted_assets/TokenomicsPro/tmp_extract/TokenomicsLab/pages/: business_model.py  community.py  crypto_trading.py  dashboard.py  econometrics.py  economic_engineering.py  market_analysis.py  market_research.py  market_simulation.py  market_stress_test.py  market_valuation.py  marketing_growth.py  models_library.py  reports.py  simulation.py  (+3 more)
(+78 files in other folders)
