[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "plotly>=6.0.1",
    "statsmodels>=0.14.4",
    "streamlit-extras>=0.6.0",
    "streamlit>=1.43.2",
    "bcrypt>=4.3.0",
    "sqlalchemy>=2.0.39",
    "psycopg2-binary>=2.9.10",
]
